--- a/src/components/frontdesk-dashboard/AppBarComponent/app-bar.css
+++ b/src/components/frontdesk-dashboard/AppBarComponent/app-bar.css
@@ -1,3 +1,11 @@
 .appBarHeader {
-  width: calc(100% - 240px) !important;
+  width: calc(100% - 335px) !important;
+  margin-right: 10px;
+}
+
+.appBarBorder {
+  box-shadow: rgba(255, 255, 255, 0.9) 0rem 0rem 0.0625rem 0.0625rem inset,
+    rgba(0, 0, 0, 0.05) 0rem 1.25rem 1.6875rem 0rem;
+  backdrop-filter: saturate(200%) blur(1.875rem);
+  background-color: rgba(255, 255, 255, 0.8);
 }
