--- a/src/components/login-component/login-page.css
+++ b/src/components/login-component/login-page.css
@@ -46,13 +46,13 @@ button[type="submit"]:hover {
   background-color: #0056b3;
 }
 
-body {
+/* body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #f4f6f9;
-}
+} */
 
 * {
   margin: 0;
