--- a/src/components/login-component/login-page.css
+++ b/src/components/login-component/login-page.css
@@ -6,6 +6,10 @@
   border-radius: 12px;
   background-color: #ffffff;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .logo {
