--- a/src/components/consultation-dashboard/consultation-dashboard.css
+++ b/src/components/consultation-dashboard/consultation-dashboard.css
@@ -1,4 +1,24 @@
 .consultation-dashboard {
   text-align: center;
-  margin: 40px;
+}
+
+.title {
+  text-align: left;
+  padding: 27px;
+  font-size: 1rem;
+  background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
+  border-radius: 0.75rem;
+  position: absolute;
+  width: calc(100% - 4.5%);
+  top: -20px;
+  left: 2.4%;
+  color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.14) 0rem 0.25rem 1.25rem 0rem,
+    rgba(0, 187, 212, 0.4) 0rem 0.4375rem 0.625rem -0.3125rem;
+}
+
+.tableContainer {
+  /* overflow-x: visible !important; */
+  overflow: visible !important;
+  border-radius: 0.75rem !important;
 }
